fixed overflow issue and added some media queries for extended mobile coverage

--- a/styles/scss/_mediaQuery.scss
+++ b/styles/scss/_mediaQuery.scss
@@ -115,6 +115,8 @@
         right: 15px;
     }
 
+
+
     .media .video-container .video {
         width: 100%;
     }
@@ -130,6 +132,11 @@
 
     .logo {
         height: 80%;
+    }
+
+    .musicHero {
+        position: relative;
+        right: 100px;
     }
 }
 
