--- a/styles/scss/_music.scss
+++ b/styles/scss/_music.scss
@@ -22,6 +22,7 @@
         flex-wrap: wrap;
         justify-content: center;
         align-items: center;
+        overflow: hidden;
 
         .video {
             width: calc(50% - 20px);
@@ -46,5 +47,5 @@
 }
 
 #booking {
-    height: 1650px;
+    height: 1710px;
 }
